--- a/src/container.html
+++ b/src/container.html
@@ -1,7 +1,7 @@
 <div class="menu">
 	<input type="checkbox" name="" class="checkbox-click" id="menu-ckb">
 	<div class="menu-top">
-		<label class="" for="menu-ckb">
+		<label class="" for="menu-ckb" id="menu-btn">
 			<div class="icon">
 				<span class="icon-top"></span>
 				<span class="icon-mid"></span>
@@ -16,9 +16,10 @@
 	</div>
 
 	<!-- menu-cover -->
-	<div class="menu-cover" id="menu-cover">
-		<div class="menu-nav-cover">
-			<h1><a class="logo" href="/"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 201.6 51.2"><g>path d="M50.2,50.1h7.1l0.5-1.9H53l0.5-2.2h3.8l0.5-1.9H54l0.5-2h4.8l0.5-2h-7.1
+	<div class="menu-cover">
+		<img id="menu-cover-img" src="./img/general.jpg" alt="">
+		<div class="menu-nav-cover" id="menu-nav-cover">
+			<h1><a class="logo" href="/"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 201.6 51.2"><g><path d="M50.2,50.1h7.1l0.5-1.9H53l0.5-2.2h3.8l0.5-1.9H54l0.5-2h4.8l0.5-2h-7.1
 	                    L50.2,50.1z M96.4,40.1h-4.7l-2.5,10h2.4l1-3.9h1.7l0.6,3.9h2.6l-0.7-4.4c1.1-0.3,2-1.4,2.3-2.6C99.4,41.6,98.7,40.1,96.4,40.1
 	                    L96.4,40.1z M96.6,43.1c-0.2,0.7-0.8,1.3-1.7,1.3H93l0.6-2.5h2.1C96.5,41.9,96.8,42.5,96.6,43.1L96.6,43.1z M68.2,41.8
 	                    c0.8,0,1.5,0.3,1.5,1.2l2.1-0.7c-0.2-2-1.9-2.4-3.2-2.4c-2.7,0.1-3.9,1.8-4.3,3.2c0,0.2,0,0.4-0.1,0.5c-0.2,2.9,3.5,2.1,4.2,3.1
@@ -63,19 +64,19 @@
 	                    c-1.2-0.2-2.6-0.3-2.3-1.3C119.9,42,120.6,41.8,121.2,41.8L121.2,41.8z M103.2,50.1h7.1l0.5-1.9H106l0.5-2.2h3.7l0.5-1.9H107
 	                    l0.5-2h4.8l0.5-2h-7.1L103.2,50.1L103.2,50.1z"></path></g></svg></a></h1>
 			<div class="menu-nav" id="menu-nav">
-				<a href="" data-type="discover">Discover</a>
-				<a href="" data-type="coffee">Our Coffee</a>
-				<a href="" data-type="community">Community</a>
-				<a href="" data-type="contact">Contact</a>
+				<a href="#" data-type="discover">Discover</a>
+				<a href="#" data-type="coffee">Our Coffee</a>
+				<a href="#" data-type="community">Community</a>
+				<a href="#" data-type="contact">Contact</a>
 			</div>
 			<div class="menu-info">
-				<a href="">Our Story</a>
-				<a href="">Coffee Supply</a>
-				<a href="">Work with us</a>
-				<a href="">Newsletter</a>
+				<a href="#">Our Story</a>
+				<a href="#">Coffee Supply</a>
+				<a href="#">Work with us</a>
+				<a href="#">Newsletter</a>
 			</div>
 			<div class="menu-social">
-				<a href="" class="icon-close"><span>Instagram</span></a>
+				<a href="#" class="icon-instagram"><span>Instagram</span></a>
 			</div>
 		</div>
 	</div>
@@ -150,8 +151,8 @@
 	</nav>
 
 </div>
-
-<!-- <div class="page-content">
+<!-- 
+<div class="page-content">
 	<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam ab, ipsum inventore voluptatum itaque officia fugit dicta ipsam illo voluptatibus odit ipsa dolorum provident, harum alias reiciendis est beatae magni!</div>
 	<div>Ut debitis ab rem reiciendis distinctio corporis ea itaque libero! Minus deserunt, error qui beatae accusamus pariatur placeat maiores est. Omnis nobis magnam doloribus, impedit dicta perferendis nemo dolorem sequi!</div>
 	<div>Tenetur, neque, sapiente reiciendis, enim eligendi sint animi ex architecto mollitia perferendis quasi, doloremque quia recusandae repudiandae dignissimos dolore et minus eveniet ea blanditiis! Sapiente fuga sint molestiae atque eligendi!</div>
